--- a/platformio.ini
+++ b/platformio.ini
@@ -13,3 +13,6 @@ platform = espressif32
 board = lolin_d32
 framework = arduino
 monitor_speed = 115200
+lib_deps =
+  ESP Async Webserver@1.2.3
+  ArduinoJSON@6.17.2
